Modifier view buttons changing positions #41467

Closed
opened 2014-08-16 21:56:55 +02:00 by Mikhail Rachinskiy · 8 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: 2.71.5 b6df448
Worked: 2.70 release

Short description of error
Modifier view buttons always fill up header space, meaning they are always changing their positions which require an artist to constantly pay attention to modifier header.

This happens not the first time, could you please comment this code to prevent further "code cleanup"?
Thanks.

Exact steps for others to reproduce the error
GIF animation to visualize the issue:
view.gif

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: 2.71.5 b6df448 Worked: 2.70 release **Short description of error** Modifier view buttons always fill up header space, meaning they are always changing their positions which require an artist to constantly pay attention to modifier header. This happens not the first time, could you please comment this code to prevent further "code cleanup"? Thanks. **Exact steps for others to reproduce the error** GIF animation to visualize the issue: ![view.gif](https://archive.blender.org/developer/F104531/view.gif)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Author
Member

Sorry for mistake, GIF animation do not present information about Blender versions, here is the full info:
Broken: 2.71 release, Master Branch
Worked: 2.66 till 2.70 release
Correct GIF animation:
view_correct.gif

Sorry for mistake, GIF animation do not present information about Blender versions, here is the full info: Broken: 2.71 release, Master Branch Worked: 2.66 till 2.70 release Correct GIF animation: ![view_correct.gif](https://archive.blender.org/developer/F104542/view_correct.gif)
Bastien Montagne self-assigned this 2014-08-16 22:11:48 +02:00

Eeeeeh, I wonder who/what changed that, I indeed found that odd the other day… should have checked against latest versions at once!

Eeeeeh, I wonder who/what changed that, I indeed found that odd the other day… should have checked against latest versions at once!

This issue was referenced by e85bcfab04

This issue was referenced by e85bcfab044f0bee9819608bab8ca95f09809ff6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e85bcfab04.

Closed by commit e85bcfab04.
Author
Member

Thanks! It's even better now when the last button grayed out instead to disappear. Small, simple, but really good UI decision.

Thanks! It's even better now when the last button grayed out instead to disappear. Small, simple, but really good UI decision.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41467
No description provided.